mesh_gitops_cluster/passthrough_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: istio-ingressgateway
  name: trafficmanager-route
  namespace: istio-system
spec:
  host: agabriel-tm-test.trafficmanager.net
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
