mesh_gitops_cluster/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "7"
  name: tracing-route
  namespace: tracing-system
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/component: query-frontend
  policyTypes:
  - Ingress
EOF
